--- a/index.html
+++ b/index.html
@@ -10,63 +10,77 @@
 
   <style>
     :root{--bg:#f4f4f4;--card:#fff;--muted:#666;--accent:#2e7d32;--radius:8px;--gap:8px}
-    body{font-family:Arial;background:var(--bg);margin:0;padding:18px}
-    h1{font-size:20px;margin-bottom:12px}
-    .section{background:#fff;padding:14px;border-radius:8px;margin-bottom:14px;box-shadow:0 1px 3px rgba(0,0,0,.1)}
-    label{font-weight:600;margin-top:10px;display:block}
-    input,select,textarea{width:100%;padding:10px;margin-top:6px;border:1px solid #ccc;border-radius:6px}
+    html,body{height:100%;margin:0}
+    body{font-family:Arial,Helvetica,sans-serif;background:var(--bg);padding:18px;color:#111}
+    h1{margin:0 0 14px 0;font-size:20px}
+    .section{background:var(--card);padding:14px;border-radius:var(--radius);margin-bottom:14px;box-shadow:0 1px 3px rgba(0,0,0,0.06)}
+    label{display:block;font-weight:600;margin-top:8px}
+    input,select,textarea,button{
+      width:100%;padding:10px;margin-top:6px;box-sizing:border-box;
+      border:1px solid #ddd;border-radius:6px;font-size:15px;background:#fff;
+    }
     textarea{resize:vertical}
-    .linha{display:flex;gap:8px;margin-top:6px;flex-wrap:wrap}
-    .linha input{flex:1 1 18%;min-width:64px;text-align:center}
-    .ponto{padding:14px;border:1px solid #ddd;border-radius:8px;background:#fafafa;margin-top:14px}
-    .coord-btn{padding:10px;background:var(--accent);border:none;color:#fff;border-radius:6px;margin-top:10px;cursor:pointer}
-    .foto-actions{display:flex;gap:8px;margin-top:8px}
-    .foto-actions button{flex:1;padding:8px;border-radius:6px;border:none;background:#2e7d32;color:white}
-    .controls{display:flex;gap:10px;margin-top:10px}
-    .controls button{flex:1;padding:12px;font-size:16px;border:none;border-radius:6px;color:white}
-    .primary{background:#2e7d32}
-    .secondary{background:#444}
+    .linha{display:flex;gap:var(--gap);flex-wrap:wrap;margin-top:6px}
+    .linha input{flex:1 1 18%;min-width:64px;padding:8px;text-align:center}
+    .ponto{
+      border:1px solid #e6e6e6;padding:12px;border-radius:8px;margin-top:12px;background:#fafafa
+    }
+    .coord-btn{
+      margin-top:10px;padding:10px;background:var(--accent);color:#fff;border:none;
+      border-radius:6px;cursor:pointer
+    }
+    .coord-display{font-size:13px;margin-top:6px;color:#444}
+    .controls{display:flex;gap:8px;margin-top:12px;flex-wrap:wrap}
+    .controls button{flex:1;padding:10px;border:none;border-radius:6px;cursor:pointer}
+    .controls .primary{background:var(--accent);color:#fff}
+    .controls .secondary{background:#666;color:#fff}
+
+    @media(max-width:600px){
+      .linha input{flex:1 1 48%}
+      .controls{flex-direction:column}
+    }
   </style>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
+
 <body>
-<h1>Controle de Estande - Soja</h1>
+  <h1>Controle de Estande - Soja</h1>
 
-<!-- Cabeçalho -->
-<div class="section">
-  <label>Responsável Técnico</label>
-  <input id="responsavel">
+  <!-- SEÇÃO SUPERIOR -->
+  <div class="section">
+    <label>Responsável Técnico</label>
+    <input id="responsavel" autocomplete="name">
 
-  <label>Talhão</label>
-  <select id="talhao"><option value="">Selecione...</option></select>
+    <label>Talhão</label>
+    <select id="talhao"><option value="">Selecione...</option></select>
 
-  <label>Área do talhão (ha)</label>
-  <input id="area" readonly>
+    <label>Área (ha)</label>
+    <input id="area" readonly>
 
-  <label>Espaçamento entre linhas (cm)</label>
-  <input id="espacamento" type="number" value="45">
+    <label>Espaçamento entre linhas (cm)</label>
+    <input id="espacamento" type="number" min="5" value="45">
 
-  <label>Quantidade de pontos</label>
-  <input id="qtdPontos" readonly>
-</div>
+    <label>Pontos (1 por 40 ha)</label>
+    <input id="qtdPontos" readonly>
+  </div>
 
-<!-- Pontos -->
-<div id="pontosContainer"></div>
+  <div id="pontosContainer"></div>
 
-<!-- Botões -->
-<div class="section controls">
-  <button class="primary" onclick="calcularPopulacao()">Calcular População</button>
-  <button class="secondary" onclick="gerarPDF()">Gerar PDF</button>
-</div>
+  <div class="section controls">
+    <button class="primary" onclick="calcularPopulacao()">Calcular População</button>
+    <button class="secondary" onclick="gerarPDF()">Gerar PDF</button>
+  </div>
 
-<div class="section">
-  <label>População estimada (plantas/ha)</label>
-  <input id="resultadoPopulacao" readonly>
-</div>
+  <div class="section">
+    <label>População estimada (pl/ha)</label>
+    <input id="resultadoPopulacao" readonly>
+  </div>
 
 <script>
-/* === Talhões === */
+/* =========================
+   TABELA DOS TALHÕES
+   ========================= */
 const talhaoAreas = {
   "XIG.JAI.B01.T01":101.35,"XIG.JAI.B01.T02":232.71,"XIG.JAI.B01.T03":263.19,
   "XIG.JAI.B02.T04":182.29,"XIG.JAI.B02.T05":281.13,"XIG.JAI.B02.T06":322.21,
@@ -89,39 +103,44 @@ const talhaoAreas = {
   "XIG.STE.B02.T06":180.08
 };
 
-/* === Monta dropdown === */
+/* =========================
+   POPULAR DROPDOWN
+   ========================= */
 document.addEventListener("DOMContentLoaded", () => {
   const sel = document.getElementById("talhao");
   Object.keys(talhaoAreas).forEach(t => {
-    const opt = document.createElement("option");
-    opt.value = t;
-    opt.textContent = t;
-    sel.appendChild(opt);
+    const o = document.createElement("option");
+    o.value = t;
+    o.textContent = t;
+    sel.appendChild(o);
   });
-  sel.onchange = selecionarArea;
+  sel.addEventListener("change", selecionarArea);
 });
 
-/* === Seleção de talhão === */
-function selecionarArea(){
+/* =========================
+   SELECIONAR TALHÃO
+   ========================= */
+function selecionarArea() {
   const t = document.getElementById("talhao").value;
   document.getElementById("area").value = talhaoAreas[t] || "";
   calcularPontos();
 }
 
-/* === Calcula nº de pontos === */
-function calcularPontos(){
-  const area = parseFloat(document.getElementById("area").value)||0;
-  const pontos = Math.max(1, Math.ceil(area/40));
-  document.getElementById("qtdPontos").value = pontos;
-  gerarPontos(pontos);
+/* =========================
+   GERAR PONTOS
+   ========================= */
+function calcularPontos() {
+  const area = parseFloat(document.getElementById("area").value) || 0;
+  const qtd = Math.max(1, Math.ceil(area / 40));
+  document.getElementById("qtdPontos").value = qtd;
+  gerarPontos(qtd);
 }
 
-/* === Gera os blocos dos pontos === */
-function gerarPontos(qtd){
-  const cont = document.getElementById("pontosContainer");
-  cont.innerHTML = "";
+function gerarPontos(qtd) {
+  const container = document.getElementById("pontosContainer");
+  container.innerHTML = "";
 
-  for(let i=1; i<=qtd; i++){
+  for (let i = 1; i <= qtd; i++) {
     const div = document.createElement("div");
     div.className = "ponto";
 
@@ -133,11 +152,11 @@ function gerarPontos(qtd){
         <option value="">Selecione...</option>
         <option>VE</option><option>V1</option><option>V2</option><option>V3</option>
         <option>V4</option><option>V5</option><option>V6+</option>
-        <option>R1</option><option>R2</option><option>R3</option><option>R4</option>
-        <option>R5</option><option>R6</option>
+        <option>R1</option><option>R2</option><option>R3</option>
+        <option>R4</option><option>R5</option><option>R6</option>
       </select>
 
-      <label>Contagem (5 linhas de 5 m)</label>
+      <label>Contagem (5 linhas × 5 m)</label>
       <div class="linha">
         <input class="l1" type="number" min="0" placeholder="L1">
         <input class="l2" type="number" min="0" placeholder="L2">
@@ -146,141 +165,217 @@ function gerarPontos(qtd){
         <input class="l5" type="number" min="0" placeholder="L5">
       </div>
 
-      <label>Média (plantas/m)</label>
+      <label>Média (pl/m)</label>
       <input class="media" readonly>
 
-      <button class="coord-btn" onclick="registrarGPS(this)">Registrar Coordenadas</button>
+      <button class="coord-btn" onclick="registrarGPS(this)">Registrar Coordenada</button>
       <div class="coord-display"></div>
 
-      <label>Fotos (máx 5)</label>
-      <input type="file" class="fotos" accept="image/*" multiple onchange="validarFotos(this)">
-
-      <div class="foto-actions">
-        <button onclick="tirarFoto(this)">Tirar Foto</button>
-        <button onclick="selecionarFoto(this)">Selecionar Fotos</button>
-      </div>
-      <div class="foto-count">0 fotos</div>
+      <label>Fotos (máx. 5 / 10MB)</label>
+      <input class="fotos" type="file" accept="image/*" multiple onchange="validarFotos(this)">
 
       <label>Daninhas</label>
-      <textarea class="obs-dan" rows="2"></textarea>
+      <textarea class="obs-dan"></textarea>
 
-      <label>Pragas e Doenças</label>
-      <textarea class="obs-prag" rows="2"></textarea>
+      <label>Pragas & Doenças</label>
+      <textarea class="obs-prag"></textarea>
 
-      <label>Nódulos – Raiz Principal</label>
+      <label>Nódulos - Raiz Principal</label>
       <input class="nod-principal">
 
-      <label>Nódulos – Raízes Secundárias</label>
+      <label>Nódulos - Raízes Secundárias</label>
       <input class="nod-secundarias">
     `;
 
-    cont.appendChild(div);
+    container.appendChild(div);
 
-    div.querySelectorAll(".linha input").forEach(inp=>{
-      inp.oninput = ()=> atualizarMedia(div);
-    });
+    div.querySelectorAll(".linha input")
+       .forEach(inp => inp.addEventListener("input", () => atualizarMedia(div)));
   }
 }
 
-/* === Média === */
-function atualizarMedia(div){
-  const vals = [...div.querySelectorAll(".linha input")].map(x=>+x.value||0);
+/* =========================
+   MÉDIA (1 casa decimal)
+   ========================= */
+function atualizarMedia(div) {
+  const vals = [...div.querySelectorAll(".linha input")].map(i => Number(i.value) || 0);
   const media = vals.reduce((a,b)=>a+b,0) / 25;
   div.querySelector(".media").value = media.toFixed(1);
 }
 
-/* === GPS === */
-function registrarGPS(btn){
+/* =========================
+   GPS
+   ========================= */
+function registrarGPS(btn) {
   const box = btn.parentElement.querySelector(".coord-display");
   navigator.geolocation.getCurrentPosition(
-    pos => box.textContent = `Lat: ${pos.coords.latitude.toFixed(6)}, Lon: ${pos.coords.longitude.toFixed(6)}`,
-    err => alert("Erro: "+err.message),
-    {enableHighAccuracy:true}
+    pos => box.textContent =
+      `Lat: ${pos.coords.latitude.toFixed(6)}, Lon: ${pos.coords.longitude.toFixed(6)}`,
+    err => alert("Erro ao obter coordenada: " + err.message),
+    {enableHighAccuracy:true,timeout:8000}
   );
 }
 
-/* === Fotos === */
-function validarFotos(input){
-  if(input.files.length > 5){
-    alert("Máximo 5 fotos");
-    input.value="";
+/* =========================
+   FOTOS
+   ========================= */
+function validarFotos(input) {
+  if (input.files.length > 5) {
+    alert("Máximo 5 fotos!");
+    input.value = "";
+    return;
   }
-  atualizarContagemFotos(input);
+  for (let f of input.files)
+    if (f.size > 10*1024*1024) {
+      alert("Cada foto deve ter até 10MB");
+      input.value = "";
+      return;
+    }
 }
 
-function tirarFoto(btn){
-  const inp = btn.closest(".ponto").querySelector(".fotos");
-  inp.setAttribute("capture","environment");
-  inp.click();
-}
+/* =========================
+   POPULAÇÃO POR HECTARE
+   ========================= */
+function calcularPopulacao() {
+  const pts = [...document.querySelectorAll(".ponto")];
+  const medias = pts.map(p => Number(p.querySelector(".media").value));
 
-function selecionarFoto(btn){
-  const inp = btn.closest(".ponto").querySelector(".fotos");
-  inp.removeAttribute("capture");
-  inp.click();
-}
+  if (medias.some(m => isNaN(m))) {
+    alert("Preencha todas as contagens.");
+    return;
+  }
 
-function atualizarContagemFotos(input){
-  const box = input.closest(".ponto").querySelector(".foto-count");
-  const qt = input.files.length;
-  box.textContent = `${qt} foto${qt===1?"":"s"}`;
-}
+  const mediaGeral = medias.reduce((a,b)=>a+b,0) / medias.length;
+  const esp = Number(document.getElementById("espacamento").value) / 100;
+  const pop = mediaGeral * (10000 / esp);
 
-/* === População === */
-function calcularPopulacao(){
-  const pontos = [...document.querySelectorAll(".media")];
-  const medias = pontos.map(x=>+x.value||0);
-  const esp = (+document.getElementById("espacamento").value)/100;
-  const mediaGeral = medias.reduce((a,b)=>a+b,0)/medias.length;
-  const pop = mediaGeral * (10000/esp);
   document.getElementById("resultadoPopulacao").value = Math.round(pop);
 }
 
-/* === PDF === */
-async function gerarPDF(){
-  const {jsPDF} = window.jspdf;
+/* =========================
+   FILE -> DATAURL (proporção mantida)
+   ========================= */
+function fileToDataURL(file, maxSide=1200) {
+  return new Promise((resolve,reject)=>{
+    const fr = new FileReader();
+    fr.onload = ()=>{
+      const img = new Image();
+      img.onload = ()=>{
+        let w = img.width, h = img.height;
+        if (Math.max(w,h) > maxSide) {
+          const r = maxSide / Math.max(w,h);
+          w = Math.round(w*r);
+          h = Math.round(h*r);
+        }
+        const c = document.createElement("canvas");
+        c.width = w; c.height = h;
+        c.getContext("2d").drawImage(img,0,0,w,h);
+        resolve(c.toDataURL("image/jpeg",0.85));
+      };
+      img.src = fr.result;
+    };
+    fr.readAsDataURL(file);
+  });
+}
+
+function dataUrlToImg(url){
+  return new Promise((r,j)=>{
+    const img = new Image();
+    img.onload = ()=>r(img);
+    img.onerror = j;
+    img.src = url;
+  });
+}
+
+/* =========================
+   GERAR PDF FINAL
+   ========================= */
+async function gerarPDF() {
+  if (!window.jspdf || !window.jspdf.jsPDF) {
+    alert("jsPDF não carregado.");
+    return;
+  }
+
+  const { jsPDF } = window.jspdf;
   const doc = new jsPDF();
-  let y=10;
+  let y = 12;
 
-  doc.text("Relatório de Estande - Soja",10,y); y+=10;
+  doc.setFontSize(14);
+  doc.text("Relatório - Controle de Estande (Soja)", 14, y); y+=8;
 
-  doc.text("Responsável: "+(document.getElementById("responsavel").value||"-"),10,y); y+=6;
-  doc.text("Talhão: "+(document.getElementById("talhao").value||"-"),10,y); y+=6;
-  doc.text("Área: "+(document.getElementById("area").value||"-")+" ha",10,y); y+=10;
+  doc.setFontSize(10);
+  doc.text(`Responsável: ${document.getElementById("responsavel").value || "-"}`, 14, y); y+=6;
+  doc.text(`Talhão: ${document.getElementById("talhao").value || "-"}`, 14, y); y+=6;
+  doc.text(`Área: ${document.getElementById("area").value || "-"}`, 14, y); y+=8;
 
-  const pontos = [...document.querySelectorAll(".ponto")];
+  const pts = [...document.querySelectorAll(".ponto")];
 
-  for(let i=0;i<pontos.length;i++){
-    const p = pontos[i];
-    doc.text(`Ponto ${i+1}`,10,y); y+=8;
+  for (let i = 0; i < pts.length; i++) {
+    const p = pts[i];
+    doc.setFontSize(12);
+    doc.text(`Ponto ${i+1}`, 14, y); y+=6;
 
-    doc.text("Fase: "+(p.querySelector(".fase").value||"-"),10,y); y+=6;
+    const fase = p.querySelector(".fase").value || "-";
+    doc.setFontSize(10);
+    doc.text(`Fase fenológica: ${fase}`, 14, y); y+=6;
 
-    doc.text("L1: "+p.querySelector(".l1").value,10,y); y+=5;
-    doc.text("L2: "+p.querySelector(".l2").value,10,y); y+=5;
-    doc.text("L3: "+p.querySelector(".l3").value,10,y); y+=5;
-    doc.text("L4: "+p.querySelector(".l4").value,10,y); y+=5;
-    doc.text("L5: "+p.querySelector(".l5").value,10,y); y+=8;
+    const l1 = p.querySelector(".l1").value || "0";
+    const l2 = p.querySelector(".l2").value || "0";
+    const l3 = p.querySelector(".l3").value || "0";
+    const l4 = p.querySelector(".l4").value || "0";
+    const l5 = p.querySelector(".l5").value || "0";
 
-    doc.text("Média: "+p.querySelector(".media").value,10,y); y+=6;
+    doc.text(`L1: ${l1}  L2: ${l2}  L3: ${l3}  L4: ${l4}  L5: ${l5}`, 14, y); y+=6;
 
-    const coord = p.querySelector(".coord-display").textContent||"Não registrada";
-    doc.text("Coord.: "+coord,10,y); y+=6;
+    const media = p.querySelector(".media").value || "0.0";
+    doc.text(`Média (pl/m): ${media}`, 14, y); y+=6;
 
-    doc.text("Daninhas: "+p.querySelector(".obs-dan").value,10,y); y+=6;
-    doc.text("Pragas: "+p.querySelector(".obs-prag").value,10,y); y+=6;
+    const coord = p.querySelector(".coord-display").textContent || "Não registrada";
+    doc.text(`Coord: ${coord}`, 14, y); y+=6;
 
-    doc.text("Nódulos (Principal): "+p.querySelector(".nod-principal").value,10,y); y+=6;
-    doc.text("Nódulos (Secundárias): "+p.querySelector(".nod-secundarias").value,10,y); y+=10;
+    const dan = p.querySelector(".obs-dan").value || "-";
+    const pra = p.querySelector(".obs-prag").value || "-";
+    const nodP = p.querySelector(".nod-principal").value || "-";
+    const nodS = p.querySelector(".nod-secundarias").value || "-";
 
-    if(y>260){doc.addPage(); y=10;}
+    doc.text(`Daninhas: ${dan}`, 14, y); y+=5;
+    doc.text(`Pragas/Doenças: ${pra}`, 14, y); y+=5;
+    doc.text(`Nód Principal: ${nodP}`, 14, y); y+=5;
+    doc.text(`Nód Secundárias: ${nodS}`, 14, y); y+=8;
+
+    // Fotos mantendo proporção
+    const fotos = p.querySelector(".fotos").files;
+    for (let f of fotos) {
+      const url = await fileToDataURL(f);
+      const img = await dataUrlToImg(url);
+
+      const pxToMm = px => px * 0.2645833333;
+
+      let w = pxToMm(img.width);
+      let h = pxToMm(img.height);
+
+      const maxW = 180;
+      const maxH = 140;
+      const ratio = Math.min(maxW/w, maxH/h);
+
+      w = w*ratio; h = h*ratio;
+
+      if (y + h > 280) { doc.addPage(); y = 12; }
+
+      doc.addImage(url, "JPEG", 14, y, w, h);
+      y += h + 8;
+    }
+
+    if (y > 270) { doc.addPage(); y = 12; }
   }
 
   doc.save("relatorio_estande.pdf");
 }
 
-/* === PWA Auto Update === */
-if("serviceWorker" in navigator){
+/* =========================
+   SERVICE WORKER
+   ========================= */
+if ("serviceWorker" in navigator) {
   navigator.serviceWorker.register("service-worker.js");
 }
 </script>
